# python-common-expression-language

./: .gitignore  Cargo.toml  pyproject.toml
.github/workflows/: build-release-wheels.yml
python/cel/: cli.py
tests/: test_reduce.py  test_stdlib.py  test_upstream_improvements.py
