[package]
name = "cel"
version = "0.5.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cel"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["chrono", "py-clone"]}
cel = { git = "https://github.com/GeniosAI/cel-rust.git", rev = "e4b95002374b9adcc862965d00ebf9c2f701d6fe", package = "cel", features = ["chrono", "json", "regex", "bytes"] }
log = "0.4.27"
pyo3-log = { git = "https://github.com/a1phyr/pyo3-log.git", branch = "pyo3_0.27" }
chrono = { version = "0.4.42", features = ["serde"] }
